<resources>
    <string name="app_name">Jurassic Park Review</string>
    <string name="retour">Retour</string>
    <string name="fermer">Fermer</string>
    <string name="titre">Jurassic Park</string>
    <string name="apropos">A PROPOS DU FILM</string>
    <string name="titreFilm">Titre</string>
    <string name="titreJurassic">Jurassic Park</string>
    <string name="titreFilmOrigine">Titre d\'origine</string>
    <string name="description">Description</string>
    <string name="descriptionJurassic">Ne pas réveiller le chat qui dort... C\'est ce que le milliardaire John Hammond aurait dû se rappeler avant de se lancer dans le \"clonage\" de dinosaures. C\'est à partir d\'une goutte de sang absorbée par un moustique fossilisé que John Hammond et son équipe ont réussi à faire renaître une dizaine d\'espèces de dinosaures. Il s\'apprête maintenant avec la complicité du docteur Alan Grant, paléontologue de renom, et de son amie Ellie, à ouvrir le plus grand parc à thème du monde. Mais c\'était sans compter la cupidité et la malveillance de l\'informaticien Dennis Nedry, et éventuellement des dinosaures, seuls maîtres sur l\'île...</string>
    <string name="motscles">Mots clés</string>
    <string name="tagJurassic">XOXOXOXOXO</string>
    <string name="aimer">Aimer</string>
    <string name="desaimer">Ne plus aimer</string>
    <string name="commenter">Commenter</string>
    <string name="partager">Partager</string>
    <string name="commentaires">Liste des commentaires</string>
    <string name="ecrireComm">Donner son avis</string>
    <string name="home">Home</string>
    <string name="details">Accéder aux détails du film</string>
    <string name="partagerAction">Pas la peine de partager, tout le monde sait que tu aimes ce film</string>
    <string name="commMessage">Votre commentaire à bien été envoyé :</string>
    <string name="titreNavCat">Categories</string>
    <string name="categories">Accéder à la liste des Catégories</string>
    <string name="titreListing">Liste des films</string>
    <string name="listing">Accéder à la liste des films</string>
    <string name="copyright"><![CDATA[Yannis BACHA & Alexandre FRAZER]]></string>
</resources>
