<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/details"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/categories"
            android:backgroundTint="@color/colorPrimary"/>
        <Button
            android:id="@+id/btnListing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/listing"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>